# incubator

./: .gitignore  CHANGELOG.md  README.md  build.sh  project.clj
adoc/: documentation.adoc
algoprog.ru/: p107.cpp  p1099.cpp  p1119.cpp  p113075.cpp  p120.c  p1370.cpp  p1411.cpp  p1422.cpp  p1430.cpp  p1435.cpp  p1436.cpp  p1456.cpp  p1568.cpp  p1576.cpp  p1838.cpp  p199.cpp  p201.cpp  p203.cpp  p206.cpp  p227.cpp  p230.cpp  p235.cpp  p264.cpp  p27.cpp  p2826.cpp  p2946.c  p2954.cpp  p2963.cpp  p297.c  p2998.cpp  p2999.cpp  p3072.cpp  p310.cpp  p3469.cpp  p3472.cpp  p3477.cpp  p3609.cpp  p39.cpp  p404.cpp  p50.cpp  (+25 more)
c/: README  p228.cpp  p255.c  p258.c  p2945.c  p303.cpp  p3077.cpp  p3612.c  p38.cpp  p506.c  p534.c  p596.c  p597.c  p74.c
capnproto/: .gitignore  CMakeLists.txt  demo-client.cpp
comb/: README.md  comb_n_k.py  comb_rep_n_k.py  perm_all.py  perm_n_k.py  perm_rep_all.py  perm_rep_n_k.py
cpp/internal-service/: CMakeLists.txt  Dockerfile  Makefile  demo-server.cpp  demo.capnp
crypto/: DiffieHellman.java  RSA256Encrypt.java  RSA256SignVerify.java  totp.py
doc/: intro.md
docker/: Dockerfile.build
java/: .gitignore
kotlin/: MyTest.kt
ml/: MyCIFAR100.ipynb  cyclic_fetures_encode.ipynb  cyclic_fetures_encode.py  tensorflow.ipynb  timeseries.ipynb
rust/: bitset.rs  error.rs  input.rs  macros_as_attr.rs  prefix_sum_array.rs  statemachine1.rs  statemachine2.rs  traits.rs
scala/: cats.scala  program-as-value.scala  stepik.scala  tagless-final-draft.scala  tagless-final.scala  task-tree.scala  zio-stm.scala  zio-zlayers.scala
sql/: Makefile  (+5 more)
(+617 files in other folders)
